force-app/main/default/objects/Candidate__c/fields/BirthOfDAte__c.field-meta.xml
<CustomField>
    <fullName>BirthOfDAte__c</fullName>
    <label>BirthOfDAte</label>
    <type>Date</type>
</CustomField>