force-app/main/default/objects/Candidate__c/fields/Bugun__c.field-meta.xml
<CustomField>
    <fullName>Bugun__c</fullName>
    <formula>TEXT( TODAY() )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bugun</label>
    <type>Text</type>
</CustomField>