force-app/main/default/objects/Candidate__c/fields/CITY__c.field-meta.xml
<CustomField>
    <fullName>CITY__c</fullName>
    <label>CITY</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>STATES__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANKARA</fullName>
            </value>
            <value>
                <fullName>İSTANBUL</fullName>
            </value>
            <value>
                <fullName>İZMİR</fullName>
            </value>
            <value>
                <fullName>BURSA</fullName>
            </value>
            <value>
                <fullName>ÇANAKKALE</fullName>
            </value>
            <value>
                <fullName>AFYON</fullName>
            </value>
            <value>
                <fullName>GAZİANTEP</fullName>
            </value>
            <value>
                <fullName>NİĞDE</fullName>
            </value>
            <value>
                <fullName>SAMSUN</fullName>
            </value>
            <value>
                <fullName>TRABZON</fullName>
            </value>
            <value>
                <fullName>Los Angeles</fullName>
            </value>
            <value>
                <fullName>Montana</fullName>
            </value>
            <value>
                <fullName>Santa Rosa</fullName>
            </value>
            <value>
                <fullName>Seattle</fullName>
            </value>
            <value>
                <fullName>Spokane</fullName>
            </value>
            <value>
                <fullName>Bellevue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>