force-app/main/default/objects/Candidate__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mr</fullName>
                <default>true</default>
                <label>Mr</label>
            </value>
            <value>
                <fullName>Mrs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>