force-app/main/default/objects/Candidate__c/fields/Identity_Number__c.field-meta.xml
<CustomField>
    <fullName>Identity_Number__c</fullName>
    <label>Identity Number</label>
    <length>11</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>