force-app/main/default/objects/Candidate__c/fields/STATES__c.field-meta.xml
<CustomField>
    <fullName>STATES__c</fullName>
    <label>STATES</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>COUNTRY__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TURKEY</fullName>
            </value>
            <value>
                <fullName>CALIFORNIA</fullName>
            </value>
            <value>
                <fullName>WASHINGTON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>