force-app/main/default/objects/Candidate__c/fields/SUBJECTS__c.field-meta.xml
<CustomField>
    <fullName>SUBJECTS__c</fullName>
    <label>SUBJECTS</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SCIENCE</fullName>
            </value>
            <value>
                <fullName>MATH</fullName>
            </value>
            <value>
                <fullName>COMMUNICATION</fullName>
            </value>
            <value>
                <fullName>BIOLOGY</fullName>
            </value>
            <value>
                <fullName>LITERATURE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>