force-app/main/default/objects/Candidate__c/fields/Tarih_ve_Zaman__c.field-meta.xml
<CustomField>
    <fullName>Tarih_ve_Zaman__c</fullName>
    <formula>NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tarih ve Zaman</label>
    <type>Date</type>
</CustomField>